[gd_scene load_steps=8 format=3 uid="uid://eo78hxwjhrue"]

[ext_resource type="Texture2D" uid="uid://byyl2kmqmdu3v" path="res://scenes/falling_ice/sprites/falling_ice.png" id="1_at82c"]
[ext_resource type="Script" path="res://scenes/falling_ice/falling_ice.gd" id="1_ccly0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6ld5"]
size = Vector2(12, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_h4jli"]
radius = 6.0

[sub_resource type="Animation" id="Animation_84agf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pvl1q"]
resource_name = "jiggle"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.10472, 0.122173, -0.0872665, 0.0698132]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bnfo2"]
_data = {
"RESET": SubResource("Animation_84agf"),
"jiggle": SubResource("Animation_pvl1q")
}

[node name="FallingIce" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ccly0")

[node name="Collider2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_t6ld5")

[node name="SpikeArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeArea2D"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_h4jli")

[node name="FallTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="DestroyTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_bnfo2")
}

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, 8)
texture = ExtResource("1_at82c")
